Bumped to v25 Rewrote the interaction layer to allow for easier development Updated WhatsInStandard Data Source Renamed EmbedColor.java to BotColors.java
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>