@@ -4,12 +4,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.terransky.stuffnthings.dataSources.NumbersAPI.NumbersAPIData;
 import com.terransky.stuffnthings.exceptions.DiscordAPIException;
 import com.terransky.stuffnthings.exceptions.FailedInteractionException;
-import com.terransky.stuffnthings.interfaces.interactions.ICommandSlash;
-import com.terransky.stuffnthings.utilities.command.CommandCategory;
-import com.terransky.stuffnthings.utilities.command.EventBlob;
-import com.terransky.stuffnthings.utilities.command.Mastermind;
-import com.terransky.stuffnthings.utilities.command.Metadata;
-import net.dv8tion.jda.api.EmbedBuilder;
+import com.terransky.stuffnthings.interfaces.interactions.SlashCommandInteraction;
+import com.terransky.stuffnthings.utilities.command.*;
+import net.dv8tion.jda.api.components.separator.Separator;
+import net.dv8tion.jda.api.components.textdisplay.TextDisplay;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.Command;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
@@ -27,7 +25,7 @@ import java.text.DateFormatSymbols;
 import java.text.DecimalFormat;
 import java.util.*;
 
-public class NumbersAPI implements ICommandSlash {
+public class NumbersAPI extends SlashCommandInteraction {
 
     private final NavigableMap<Integer, Integer> dayLimits = new TreeMap<>() {{
         put(1, 31);
@@ -45,43 +43,34 @@ public class NumbersAPI implements ICommandSlash {
     }};
     private final Logger log = LoggerFactory.getLogger(NumbersAPI.class);
     private final DecimalFormat intFormatter = new DecimalFormat("###");
-    private final List<Command.Choice> monthChoices = new ArrayList<>() {{
-        String[] months = new DateFormatSymbols().getMonths();
-        for (int i = 0; i < 12; i++) {
-            add(new Command.Choice(String.format("[%s] %s", (i + 1), months[i]), (i + 1)));
-        }
-    }};
 
-    @Override
-    public String getName() {
-        return "number-facts";
-    }
-
-    @Override
-    public Metadata getMetadata() {
-        return new Metadata(this.getName(), "Get some fun info on a number", """
-            Random facts about numbers! How nerdy/geeky can you get? Leaving any option empty will return a random fact of that category.
-            Facts are provided by [NumbersAPI](http://numbersapi.com).
-            """, Mastermind.DEVELOPER,
-            CommandCategory.MATHS,
-            Metadata.parseDate(2022, 11, 10, 20, 45),
-            Metadata.parseDate(2024, 2, 9, 16, 11)
-        )
-            .addSubcommands(
-                new SubcommandData("number", "A fact about a number.")
-                    .addOption(OptionType.NUMBER, "n-number", "A number"),
-                new SubcommandData("math", "A math fact about a number.")
-                    .addOption(OptionType.NUMBER, "m-number", "A number"),
-                new SubcommandData("date", "A random historical fact on a particular month and day.")
-                    .addOptions(
-                        new OptionData(OptionType.STRING, "month", "The month.")
-                            .addChoices(monthChoices),
-                        new OptionData(OptionType.INTEGER, "day", "The day.")
-                            .setRequiredRange(1, 31)
-                    ),
-                new SubcommandData("year", "A random historical fact during a particular year.")
-                    .addOption(OptionType.NUMBER, "year", "A year.")
-            );
+    public NumbersAPI() {
+        super("number-facts", "Get some fun info on a number", Mastermind.DEVELOPER, CommandCategory.MATHS,
+            parseDate(2022, 11, 10, 20, 45),
+            parseDate(2025, 12, 27, 4, 20)
+        );
+        List<Command.Choice> monthChoices = new ArrayList<>() {{
+            String[] months = new DateFormatSymbols().getMonths();
+            for (int i = 0; i < 12; i++) {
+                add(new Command.Choice(String.format("[%s] %s", (i + 1), months[i]), (i + 1)));
+            }
+        }};
+        addSubcommands(
+            new SubcommandData("number", "A fact about a number.")
+                .addOption(OptionType.NUMBER, "n-number", "A number"),
+            new SubcommandData("math", "A math fact about a number.")
+                .addOption(OptionType.NUMBER, "m-number", "A number"),
+            new SubcommandData("date", "A random historical fact on a particular month and day.")
+                .addOptions(
+                    new OptionData(OptionType.STRING, "month", "The month.")
+                        .addChoices(monthChoices),
+                    new OptionData(OptionType.INTEGER, "day", "The day.")
+                        .setRequiredRange(1, 31)
+                ),
+            new SubcommandData("year", "A random historical fact during a particular year.")
+                .addOption(OptionType.NUMBER, "year", "A year.")
+        );
+        setDisabledReason("API is down. Any connection to the service returns nothing.");
     }
 
     @Override
@@ -90,17 +79,16 @@ public class NumbersAPI implements ICommandSlash {
         String subcommand = event.getSubcommandName();
         if (subcommand == null) throw new DiscordAPIException("No subcommand was given");
         String theUrl = "http://numbersapi.com/";
-        EmbedBuilder response = blob.getStandardEmbed();
 
         switch (subcommand) {
-            case "number" -> apiNumber(event, theUrl, response);
-            case "math" -> apiMath(event, theUrl, response);
-            case "date" -> apiDate(event, theUrl, response);
-            case "year" -> apiYear(event, theUrl, response);
+            case "number" -> apiNumber(event, theUrl);
+            case "math" -> apiMath(event, theUrl);
+            case "date" -> apiDate(event, theUrl);
+            case "year" -> apiYear(event, theUrl);
         }
     }
 
-    private void apiYear(@NotNull SlashCommandInteractionEvent event, String theUrl, EmbedBuilder eb) throws IOException {
+    private void apiYear(@NotNull SlashCommandInteractionEvent event, String theUrl) throws IOException {
         Optional<Double> ifYear = Optional.ofNullable(event.getOption("year", OptionMapping::getAsDouble));
 
         if (ifYear.isPresent())
@@ -108,7 +96,7 @@ public class NumbersAPI implements ICommandSlash {
         else
             theUrl += "random/year";
 
-        log.debug("The url is {}.", theUrl);
+        logURL(theUrl);
         URL request = new URL(theUrl);
         HttpURLConnection numbersAPI = (HttpURLConnection) request.openConnection();
         numbersAPI.addRequestProperty("Content-Type", "application/json");
@@ -129,15 +117,16 @@ public class NumbersAPI implements ICommandSlash {
             yearStr = intFormatter.format(Math.abs(year)) + " BC";
         } else yearStr = intFormatter.format(year);
 
-        event.getHook().sendMessageEmbeds(
-            eb.setTitle("Random Year Fact")
-                .setDescription(text)
-                .addField("Date", "%s %s".formatted(date, yearStr), false)
-                .build()
+        event.getHook().sendMessageComponents(
+            StandardResponse.getResponseContainer("Random Year Fact", List.of(
+                TextDisplay.of(text),
+                Separator.createDivider(Separator.Spacing.SMALL),
+                TextDisplay.of(String.format("### %s %s", date, yearStr))
+            ))
         ).queue();
     }
 
-    private void apiDate(@NotNull SlashCommandInteractionEvent event, String theUrl, EmbedBuilder eb) throws IOException {
+    private void apiDate(@NotNull SlashCommandInteractionEvent event, String theUrl) throws IOException {
         Optional<Integer> uMonth = Optional.ofNullable(event.getOption("month", OptionMapping::getAsInt));
         Optional<Integer> uDay = Optional.ofNullable(event.getOption("day", OptionMapping::getAsInt));
         String monthString = "";
@@ -146,13 +135,15 @@ public class NumbersAPI implements ICommandSlash {
         int maxDays;
         Map.Entry<Integer, Integer> dayLimit;
 
+        String title = "NumbersAPI Date Fact";
         if ((uMonth.isEmpty() && uDay.isPresent()) || (uMonth.isPresent() && uDay.isEmpty())) {
-            event.getHook().sendMessageEmbeds(
-                eb.setTitle("NumbersAPI Date Fact")
-                    .setDescription("Missing value. Both values must be entered.")
-                    .addField("Option Given", uMonth.isPresent() ? "Month" : "Day", true)
-                    .addField("Option Value", uMonth.isPresent() ? String.valueOf(uMonth.get()) : String.valueOf(uDay.get()), true)
-                    .build()
+            event.getHook().sendMessageComponents(
+                StandardResponse.getResponseContainer(title, List.of(
+                    TextDisplay.of("Missing value. Both values must be entered."),
+                    Separator.createDivider(Separator.Spacing.SMALL),
+                    TextDisplay.of(String.format("### Option Given\n%s", uMonth.isPresent() ? "Month" : "Day")),
+                    TextDisplay.of(String.format("### Option Value\n %s", uMonth.isPresent() ? String.valueOf(uMonth.get()) : String.valueOf(uDay.get())))
+                ), BotColors.ERROR)
             ).queue();
             return;
         }
@@ -169,10 +160,11 @@ public class NumbersAPI implements ICommandSlash {
             if (day > maxDays) {
                 String maxDaysStr = month == 2 ? "at most 29" : String.valueOf(maxDays);
 
-                event.getHook().sendMessageEmbeds(
-                    eb.setTitle("NumbersAPI Date Fact")
-                        .setDescription("You have entered an invalid day for %s. Remember there are only %s days in %s.".formatted(monthString, maxDaysStr, monthString))
-                        .build()
+                event.getHook().sendMessageComponents(
+                    StandardResponse.getResponseContainer(title,
+                        TextDisplay.of(String.format("You have entered an invalid day for %s. Remember there are only %s days in %s.", monthString, maxDaysStr, monthString)),
+                        BotColors.ERROR
+                    )
                 ).queue();
                 return;
             }
@@ -180,7 +172,7 @@ public class NumbersAPI implements ICommandSlash {
             theUrl += "%s/%s/date".formatted(month, day);
         }
 
-        log.debug("The url is {}.", theUrl);
+        logURL(theUrl);
         URL request = new URL(theUrl);
         HttpURLConnection numbersAPI = (HttpURLConnection) request.openConnection();
         numbersAPI.addRequestProperty("Content-Type", "application/json");
@@ -195,22 +187,27 @@ public class NumbersAPI implements ICommandSlash {
             day = Integer.parseInt(tempStr[1].replaceAll("st|nd|rd|th", ""));
         }
 
-        event.getHook().sendMessageEmbeds(
-            eb.setTitle("NumbersAPI Date Fact")
-                .setDescription(text)
-                .addField("Date", "%s %s, %s".formatted(monthString, day, year), false)
-                .build()
+        event.getHook().sendMessageComponents(
+            StandardResponse.getResponseContainer(title, List.of(
+                TextDisplay.of(text),
+                Separator.createDivider(Separator.Spacing.SMALL),
+                TextDisplay.of(String.format("Date - %s %s, %s", monthString, day, year))
+            ))
         ).queue();
     }
 
-    private void apiMath(@NotNull SlashCommandInteractionEvent event, String theUrl, EmbedBuilder eb) throws IOException {
+    private void logURL(String theUrl) {
+        log.debug("The url is {}.", theUrl);
+    }
+
+    private void apiMath(@NotNull SlashCommandInteractionEvent event, String theUrl) throws IOException {
         Optional<Double> ifNumber = Optional.ofNullable(event.getOption("m-number", OptionMapping::getAsDouble));
         if (ifNumber.isPresent())
             theUrl += (intFormatter.format(ifNumber.get()) + "/math");
         else
             theUrl += "random/math";
 
-        log.debug("The url is {}.", theUrl);
+        logURL(theUrl);
         URL request = new URL(theUrl);
         HttpURLConnection numbersAPI = (HttpURLConnection) request.openConnection();
         numbersAPI.addRequestProperty("Content-Type", "application/json");
@@ -219,15 +216,12 @@ public class NumbersAPI implements ICommandSlash {
         String text = numbersAPIData.getText(),
             actNumber = intFormatter.format(numbersAPIData.getNumber());
 
-        event.getHook().sendMessageEmbeds(
-            eb.setTitle("NumbersAPI Math Fact")
-                .setDescription(text)
-                .addField("Number", actNumber, false)
-                .build()
+        event.getHook().sendMessageComponents(
+            StandardResponse.getResponseContainer(String.format("NumbersAPI Math Fact [%s]", actNumber), TextDisplay.of(text))
         ).queue();
     }
 
-    private void apiNumber(@NotNull SlashCommandInteractionEvent event, String theUrl, EmbedBuilder eb) throws IOException {
+    private void apiNumber(@NotNull SlashCommandInteractionEvent event, String theUrl) throws IOException {
         Optional<Double> number = Optional.ofNullable(event.getOption("n-number", OptionMapping::getAsDouble));
 
         if (number.isPresent())
@@ -235,7 +229,7 @@ public class NumbersAPI implements ICommandSlash {
         else
             theUrl += "random";
 
-        log.debug("The url is {}.", theUrl);
+        logURL(theUrl);
         URL request = new URL(theUrl);
         HttpURLConnection numbersAPI = (HttpURLConnection) request.openConnection();
         numbersAPI.addRequestProperty("Content-Type", "application/json");
@@ -244,11 +238,8 @@ public class NumbersAPI implements ICommandSlash {
         String text = numbersAPIData.getText(),
             actNumber = intFormatter.format(numbersAPIData.getNumber());
 
-        event.getHook().sendMessageEmbeds(
-            eb.setTitle("NumbersAPI Number Fact")
-                .setDescription(text)
-                .addField("Number", actNumber, false)
-                .build()
+        event.getHook().sendMessageComponents(
+            StandardResponse.getResponseContainer(String.format("NumbersAPI Number Fact [%s]", actNumber), TextDisplay.of(text))
         ).queue();
     }
 }
